--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
 /* --------- Global style */
+@import url('https://fonts.googleapis.com/css2?family=Tourney&display=swap');
 
 body {
     background-color: white;
-    font-family: "Raleway", sans-serif;
+    font-family: "Tourney", sans-serif;
     color: #445361;
     text-align: center;
 }
@@ -89,7 +90,7 @@ body {
 .btn {
     width: 220px;
     height: 60px;
-    font-family: "Raleway", sans-serif;
+    font-family: "Tourney", sans-serif;
     text-transform: uppercase;
     letter-spacing: 1.2px;
     color: white;
